# findPrimes

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  compile_commands.json  input.cpp  input.h  main.cpp  main.h  primes.cpp  primes.h  utilities.cpp  utilities.h
.github/workflows/: cmake-build-debug.yml  cmake-build-release.yml  cmake.yml
bits/: stdc++.h
src/: argInput.cpp  main.cpp  multiThread.cpp  singleThread.cpp  utilities.cpp
src/findPrimes/: primesGen.cpp  primesGen.h
src/includes/: argInput.h  main.h  multiThread.h  segSieveMethods.h  sieveMethods.h  singleThread.h  utilities.h
src/sieves/: segSieveMethods.cpp  sieveMethods.cpp
